--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^1.6.8",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.77.1",
-        "sass-loader": "^12.6.0"
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
     },
     "dependencies": {
         "bootstrap": "^5.3.3"
